--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
 	<!-- Primary Meta Tags -->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>EP2 - Helpers</title>
+	<title>Eclipse Phase 2ed Helpers</title>
+	<meta name="title" content="Eclipse Phase 2ed Helpers">
+	<meta name="description" content="Online character editor, database of game items/morphs, etc.">
 
 	<base href="/eclipsehelper/">
 
